plugins {
	id 'org.springframework.boot' version '2.6.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.cakefactory'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	testImplementation 'net.sourceforge.htmlunit:htmlunit'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  	runtimeOnly 'com.h2database:h2'
  	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core'
}

test {
	useJUnitPlatform()
}
